apps/wallabag/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wallabag
  namespace: default
spec:
  selector:
    matchLabels:
      app: wallabag
  replicas: 1
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 2
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wallabag
    spec:
      containers:
        - name: wallabag
          image: wallabag/wallabag:latest
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/www/wallabag/data
              name: wallabag-content
            - mountPath: /var/www/wallabag/web/assets/images
              name: wallabag-content
      volumes:
        - name: wallabag-content
          persistentVolumeClaim:
            claimName: wallabag-claim
