apps/wallabag/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wallabag
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`wal.joejad.com`)
      kind: Rule
      services:
        - name: wallabag
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
